# SPDX-License-Identifier: Apache-2.0

option('HW_ISOLATION_BUSNAME', type: 'string',
        value : 'org.open_power.HardwareIsolation',
        description : 'The D-Bus name to own for hardware isolation'
      )

# D-Bus object path should not end with "/"
option('HW_ISOLATION_OBJPATH', type: 'string',
        value : '/xyz/openbmc_project/hardware_isolation',
        description : 'The hardware isolation D-Bus root'
      )
