# SPDX-License-Identifier: Apache-2.0

option('HW_ISOLATION_BUSNAME', type: 'string',
        value : 'org.open_power.HardwareIsolation',
        description : 'The D-Bus name to own for hardware isolation'
      )

# D-Bus object path should not end with "/"
option('HW_ISOLATION_OBJPATH', type: 'string',
        value : '/xyz/openbmc_project/hardware_isolation',
        description : 'The hardware isolation D-Bus root'
      )

option('PHAL_DEVTREE', type: 'string',
        value : '/var/lib/phosphor-software-manager/hostfw/running/DEVTREE',
        description : 'The PHAL CEC device tree to get hardware details'
      )

option('HW_ISOLATION_ENTRY_OBJPATH', type: 'string',
        value : '/xyz/openbmc_project/hardware_isolation/entry',
        description : 'The hardware isolation dbus entry object path'
      )
